--- a/smart-brain-api/package.json
+++ b/smart-brain-api/package.json
@@ -8,7 +8,9 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.4",
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "knex": "^0.15.2",
+    "pg": "^7.4.3"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
