--- a/smart-brain-api/package.json
+++ b/smart-brain-api/package.json
@@ -7,6 +7,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "knex": "^0.15.2",
