--- a/smart-brain-api/package.json
+++ b/smart-brain-api/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
     "cors": "^2.8.4",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "knex": "^0.15.2",
     "pg": "^7.4.3"
